--- a/src/app/components/dialogs/share-dialog/share-dialog.component.scss
+++ b/src/app/components/dialogs/share-dialog/share-dialog.component.scss
@@ -6,6 +6,6 @@ mat-form-field {
   width: 100%;
 }
 
-::ng-deep .mat-dialog-container {
+::ng-deep .mat-mdc-dialog-container {
   //box-sizing: content-box;
 }
