--- a/src/app/components/main/components/top-bar/top-app-bar.component.scss
+++ b/src/app/components/main/components/top-bar/top-app-bar.component.scss
@@ -129,6 +129,7 @@ a[mat-stroked-button] {
   display: none;
 }
 
+/*  TODO(mdc-migration): The following rule targets internal classes of menu that may no longer apply for the MDC version.*/
 .mat-menu {
 
   app-gf-icon {
