--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -35,9 +35,14 @@
           <router-outlet></router-outlet>
 
           <div class='fixed-fab-btn'>
-            <a mat-fab routerLink='/questions/create' class='extended-fab' appExtendedFab>
+        <!--    <a mat-fab routerLink='/questions/create' class='extended-fab' appExtendedFab>
               <app-icon name='create'></app-icon>
               <span>Soru sor</span>
+            </a>-->
+
+            <a mat-fab routerLink="/questions/create" extended>
+              <mat-icon>create</mat-icon>
+              Soru sor
             </a>
 
           </div>
