--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -160,7 +160,7 @@ mat-sidenav-container {
 
 @media (prefers-color-scheme: dark) {
   .fixed-fab-btn {
-    .mat-fab {
+    .mat-mdc-fab {
       background-color: #BB86FC;
       letter-spacing: 1.25px;
       color: black;
