--- a/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
+++ b/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
@@ -10,26 +10,26 @@
   <section>
     <mat-nav-list>
       <a mat-list-item routerLink='/settings'>
-        <app-icon name='settings'></app-icon>
+        <app-icon name='settings' matListItemIcon></app-icon>
         <span>Hesap & ayarlar</span>
       </a>
       <a mat-list-item routerLink='/help'>
-        <app-icon name='help'></app-icon>
+        <app-icon name='help' matListItemIcon></app-icon>
         <span>Yardım</span>
       </a>
       <mat-list-item (click)='logout()'>
-        <app-icon name='logout'></app-icon>
+        <app-icon name='logout' matListItemIcon></app-icon>
         <span>Oturumu kapat</span>
       </mat-list-item>
     </mat-nav-list>
     <mat-divider></mat-divider>
     <mat-nav-list>
       <a mat-list-item routerLink='/settings'>
-        <app-icon name='dark_mode'></app-icon>
+        <app-icon name='dark_mode' matListItemIcon></app-icon>
         <span>Görünüm: Cihaz Teması</span>
       </a>
       <a mat-list-item routerLink='/settings'>
-        <app-icon name='keyboard'></app-icon>
+        <app-icon name='keyboard' matListItemIcon></app-icon>
         <span>Klavye kısayolları</span>
       </a>
     </mat-nav-list>
