--- a/src/app/pages/question/components/answer-list/answer-list.component.html
+++ b/src/app/pages/question/components/answer-list/answer-list.component.html
@@ -6,7 +6,7 @@
       <span>Sıralama ölçütü</span>
     </button>
   </div>
-  <app-answer-item *ngFor='let answer of answers' [answer]='answer'></app-answer-item>
+  <app-answer-item *ngFor='let answer of answers' [answer]='answer' />
 </ng-container>
 
 <ng-template #noAnswer>
