--- a/src/app/pages/question/question.component.scss
+++ b/src/app/pages/question/question.component.scss
@@ -62,7 +62,7 @@ a:hover {
     }
   }
 
-  .mat-button {
+  .mat-mdc-button {
     mat-icon {
      /* width: 18px;
       height: 18px;
@@ -76,7 +76,7 @@ a:hover {
   margin: 8px 0;
 }
 
-.mat-button {
+.mat-mdc-button {
   letter-spacing: 0;
 
   mat-icon {
@@ -139,7 +139,7 @@ a:hover {
     margin-right: 12px;
   }
 
-  .mat-button {
+  .mat-mdc-button {
     letter-spacing: 1.25px;
   }
 }
