--- a/src/app/users/components/user-list-item/user-list-item.component.html
+++ b/src/app/users/components/user-list-item/user-list-item.component.html
@@ -1,15 +1,15 @@
-<div class='user-box'>
+<div class="user-box">
   <app-img-shadow
-    alt='{{user.displayName}}'
-    class='user-picture-renderer'
-    [src]='user.picture'
-    [width]='140'
-    [height]='140'
-  >
-  </app-img-shadow>
-  <div class='user-info'>
-    <a routerLink='/user/{{user.id}}'>
-      <span class='user-title'>{{user.displayName}}</span>
+    alt="{{user.displayName}}"
+    class="user-picture-renderer"
+    [src]="user.picture"
+    [width]="140"
+    [height]="140"
+  />
+
+  <div class="user-info">
+    <a routerLink="/user/{{user.id}}">
+      <span class="user-title">{{user.displayName}}</span>
     </a>
     <button mat-stroked-button>Takip et</button>
     <!--<mat-divider></mat-divider>-->
