--- a/src/app/users/components/user-list-item/user-list-item.component.scss
+++ b/src/app/users/components/user-list-item/user-list-item.component.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.mat-stroked-button {
+.mat-mdc-outlined-button {
   // letter-spacing: 1.25px;
   margin: 16px 0;
   font-family: Archivo, sans-serif;
