--- a/src/app/components/dialogs/hotkey-dialog/hotkey-dialog.component.scss
+++ b/src/app/components/dialogs/hotkey-dialog/hotkey-dialog.component.scss
@@ -10,6 +10,7 @@ kbd {
   padding: 0 8px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version. */
 mat-list {
   padding: 24px 0;
 }
