--- a/src/app/components/dialogs/watched-tag-list-dialog/watched-tag-list-dialog.component.scss
+++ b/src/app/components/dialogs/watched-tag-list-dialog/watched-tag-list-dialog.component.scss
@@ -1,3 +1,5 @@
+
+/* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
 :host ::ng-deep mat-chip-list {
   display: flex;
   padding: 4px 0;
