--- a/src/app/components/main/components/side-sheet/side-sheet.component.scss
+++ b/src/app/components/main/components/side-sheet/side-sheet.component.scss
@@ -11,6 +11,7 @@ mat-toolbar {
   }
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
 mat-radio-group {
   display: flex;
   flex-direction: column;
