--- a/src/app/components/main/components/top-bar/components/search-form/search-form.component.scss
+++ b/src/app/components/main/components/top-bar/components/search-form/search-form.component.scss
@@ -13,7 +13,7 @@
   background-color: var(--search-background);
   padding-left: 4px;
   padding-right: 16px;
-  border-radius: 8px;
+  border-radius: 24px;
 }
 
 input {
@@ -44,18 +44,16 @@ input::placeholder, input::-moz-placeholder {
   ==========================================================================
 */
 
-.mat-optgroup .mat-option:not(.mat-option-multiple) {
+.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   padding-left: 52px !important;
 }
 
 ::ng-deep .my-autocomplete {
-  padding: 8px 0 0;
   max-height: calc(100vh - 64px) !important;
-  background-color: var(--autocomplete-background);
-  margin-top: 4px;
+  margin-top: 4px !important;
   border-radius: 8px !important;
 
-  .mat-option {
+  .mat-mdc-option {
     height: 40px !important;
     // padding-left: 56px !important;
     font-size: 14px;
@@ -63,15 +61,18 @@ input::placeholder, input::-moz-placeholder {
     // letter-spacing: .25px;
   }
 
-  .mat-optgroup-label {
+  .mat-mdc-optgroup-label {
     display: flex;
     align-items: center;
-    font-size: 10px;
-    line-height: 16px;
-    letter-spacing: 1.5px;
-    color: var(--medium-emphasis-color);
-    text-transform: uppercase;
     padding-left: 52px;
+
+    .mdc-list-item__primary-text {
+      font-size: 10px;
+      line-height: 16px;
+      letter-spacing: 1.5px;
+      color: var(--medium-emphasis-color);
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -82,19 +83,21 @@ input::placeholder, input::-moz-placeholder {
 }
 
 // Fix menu and select panel overflow scroll bar
-::ng-deep .my-autocomplete::-webkit-scrollbar, .mat-select-panel::-webkit-scrollbar {
+::ng-deep .my-autocomplete::-webkit-scrollbar, .mat-mdc-select-panel::-webkit-scrollbar {
   width: 8px;
 }
 
-::ng-deep .my-autocomplete::-webkit-scrollbar-thumb, .mat-select-panel::-webkit-scrollbar-thumb {
+::ng-deep .my-autocomplete::-webkit-scrollbar-thumb, .mat-mdc-select-panel::-webkit-scrollbar-thumb {
   background: rgba(95, 99, 104, .45);
   border-radius: 10px;
 }
 
-::ng-deep .my-autocomplete::-webkit-scrollbar-track, .mat-select-panel::-webkit-scrollbar-track {
+::ng-deep .my-autocomplete::-webkit-scrollbar-track, .mat-mdc-select-panel::-webkit-scrollbar-track {
   border-radius: 10px;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of option that may no longer apply for the MDC version.
+*/
 ::ng-deep .mat-option-text {
   display: flex !important;
   align-items: center;
