--- a/src/app/components/popups/notification-list-popup/notification-list-popup.component.scss
+++ b/src/app/components/popups/notification-list-popup/notification-list-popup.component.scss
@@ -36,6 +36,7 @@ section:hover {
   overflow: auto;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 :host ::ng-deep .mat-list-item-content {
   align-items: flex-start !important;
   padding: 16px !important;
@@ -55,7 +56,7 @@ h3 {
   font-size: 13px !important;
 }
 
-:host ::ng-deep .mat-list-avatar {
+:host ::ng-deep .mat-mdc-list-item-avatar {
 /*  width: 48px !important;
   height: 48px !important;*/
 }
