--- a/src/app/pages/create-question/chips-autocomplete/chips-autocomplete.component.scss
+++ b/src/app/pages/create-question/chips-autocomplete/chips-autocomplete.component.scss
@@ -6,6 +6,7 @@ mat-form-field {
   width: 100%;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of option that may no longer apply for the MDC version. */
 mat-option {
   height: 48px;
   font-size: 14px;
