--- a/src/app/pages/create-question/create-question.component.scss
+++ b/src/app/pages/create-question/create-question.component.scss
@@ -39,6 +39,7 @@ mat-form-field {
   width: 100%;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
 ::ng-deep .mat-form-field-appearance-standard .mat-form-field-underline {
   // background-color: rgba(0, 0, 0, .12) !important;
 }
