--- a/src/app/pages/question/components/answer-list/answer-item/answer-item.component.scss
+++ b/src/app/pages/question/components/answer-list/answer-item/answer-item.component.scss
@@ -76,7 +76,7 @@ a:hover {
     }
   }
 
-  .mat-button {
+  .mat-mdc-button {
     mat-icon {
       width: 18px;
       height: 18px;
@@ -85,7 +85,7 @@ a:hover {
   }
 }
 
-.mat-stroked-button {
+.mat-mdc-outlined-button {
   border-radius: 18px;
   border-color: #6200ee;
 
