--- a/src/app/pages/question/components/question-text/question-text.component.scss
+++ b/src/app/pages/question/components/question-text/question-text.component.scss
@@ -2,6 +2,13 @@
   display: block;
 }
 
+::ng-deep p {
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: .5px;
+}
+
 .content {
   margin: 64px 0 0 0;
 }
