--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -52,7 +52,7 @@ img {
   align-items: center;
 }
 
-.example-headers-align .mat-form-field + .mat-form-field {
+.example-headers-align .mat-mdc-form-field + .mat-form-field {
   margin-left: 8px;
 }
 
