--- a/src/app/tags/components/tag-list/tag-list.component.html
+++ b/src/app/tags/components/tag-list/tag-list.component.html
@@ -1,1 +1,1 @@
-<app-tag-list-item *ngFor='let tag of tags' [tag]='tag'></app-tag-list-item>
+<app-tag-list-item *ngFor='let tag of tags' [tag]='tag' />
