--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,4 +3,4 @@
   <p class='subtitle-1 page-description'>Our latest news, updates, and stories for developers</p>
 </header>
 
-<app-user-list></app-user-list>
+<app-user-list />
