--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,9 @@
 @use "styles/reset";
 @use '@angular/material' as mat;
 
-$typography-configuration: mat.define-legacy-typography-config(
-  $font-family: 'Archivo, "Helvetica Neue", sans-serif',
-  $display-4: mat.define-typography-level(112px, 112px, 300),
-  $display-3: mat.define-typography-level(56px, 56px, 400),
-  $display-2: mat.define-typography-level(100px, 48px, 400),
-  $display-1: mat.define-typography-level(100px, 34px, 400),
-  $headline: mat.define-typography-level(24px, 32px, 400),
-  $title: mat.define-typography-level(20px, 32px, 500),
-  $subheading-2: mat.define-typography-level(14px, 24px, 500),
-  $subheading-1: mat.define-typography-level(16px, 24px, 400),
-  $body-2: mat.define-typography-level(14px, 20px, 400),
-  $body-1: mat.define-typography-level(16px, 24px, 400),
-  $caption: mat.define-typography-level(12px, 16px, 400),
-  $button: mat.define-typography-level(14px, 14px, 500),
-  $input: mat.define-typography-level(inherit, 1.125, 400)
-);
+@include mat.core();
 
+//* TODO(mdc-migration): No longer supported. Use `body-1` instead. put: mat.define-typography-level(inherit, 1.125, 400));
 // TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
 //  The following line adds:
 //    1. Default typography styles for all components
@@ -26,61 +12,70 @@ $typography-configuration: mat.define-legacy-typography-config(
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy($typography-configuration);`
-@include mat.all-legacy-component-typographies($typography-configuration);
-@include mat.legacy-core();
 
-$custom-typography: mat.define-legacy-typography-config(
+$custom-typography: mat.define-typography-config(
   $font-family: 'Archivo, sans-serif',
 );
 
-$headlines-and-subtitles-typography: mat.define-legacy-typography-config(
+$headlines-and-subtitles-typography: mat.define-typography-config(
   $font-family: 'Archivo, sans-serif'
 );
 
-$body-and-captions-typography: mat.define-legacy-typography-config(
+$body-and-captions-typography: mat.define-typography-config(
   $font-family: 'Roboto, sans-serif',
 );
 
-$snackbar-typo: mat.define-legacy-typography-config(
+$snackbar-typo: mat.define-typography-config(
   $font-family: 'Archivo, sans-serif',
 );
 
 $my-custom-level: mat.define-typography-level(14px, 24px, 700, $letter-spacing: 10px);
 
 // Badge typography
-$badge-typo: mat.define-legacy-typography-config(
-  $font-family: 'Archivo, sans-serif'
+$badge-typo: mat.define-typography-config(
+  $font-family: 'Archivo, sans-serif',
+  $subtitle-1: mat.define-typography-level(14px, 24px, 500)
 );
 
 // List typography
-$list-typography: mat.define-legacy-typography-config(
-  $font-family: 'Archivo, sans-serif'
+$list-typography: mat.define-typography-config(
+  $font-family: 'Roboto, sans-serif',
+  $body-1: mat.define-typography-level(
+    // $font-family: 'Archivo, sans-serif',
+    $font-weight: 400,
+    $font-size: 14px,
+    $line-height: 24px,
+    $letter-spacing: 0,
+  )
 );
 
 // Chips typography
-$chip-typography: mat.define-legacy-typography-config(
-  $font-family: 'Roboto, sans-serif',
-  $body-2: mat.define-typography-level(14px, 20px, 400)
+$chip-typography: mat.define-typography-config(
+  $font-family: 'Roboto, sans-serif'
 );
 
-@include mat.legacy-tabs-typography($headlines-and-subtitles-typography);
-@include mat.legacy-form-field-typography($body-and-captions-typography);
-@include mat.legacy-radio-typography($body-and-captions-typography);
-@include mat.legacy-option-typography($body-and-captions-typography);
-@include mat.legacy-tooltip-typography($body-and-captions-typography);
+@include mat.tabs-typography($headlines-and-subtitles-typography);
+@include mat.form-field-typography($body-and-captions-typography);
+@include mat.radio-typography($body-and-captions-typography);
+@include mat.option-typography($body-and-captions-typography);
+@include mat.tooltip-typography($body-and-captions-typography);
 
 /**
   Body and captions
  */
 @include mat.badge-typography($body-and-captions-typography);
-@include mat.legacy-checkbox-typography($body-and-captions-typography);
-@include mat.legacy-snack-bar-typography($body-and-captions-typography);
-@include mat.legacy-menu-typography($body-and-captions-typography);
-@include mat.legacy-optgroup-typography($body-and-captions-typography);
-@include mat.legacy-option-typography($badge-typo);
-@include mat.legacy-autocomplete-typography($body-and-captions-typography);
-@include mat.legacy-snack-bar-typography($badge-typo);
-@include mat.legacy-card-typography($badge-typo);
+@include mat.checkbox-typography($body-and-captions-typography);
+@include mat.snack-bar-typography($body-and-captions-typography);
+@include mat.button-typography($body-and-captions-typography);
+@include mat.menu-typography($body-and-captions-typography);
+@include mat.optgroup-typography($body-and-captions-typography);
+@include mat.option-typography($badge-typo);
+@include mat.autocomplete-typography($body-and-captions-typography);
+@include mat.snack-bar-typography($badge-typo);
+@include mat.button-typography($badge-typo);
+@include mat.card-typography($badge-typo);
+
+@include mat.list-typography($list-typography);
 
 html {
   background-color: var(--html-bg-color);
@@ -122,7 +117,7 @@ svg {
  */
 // box-shadow: 0 8px 10px rgba(0, 0, 0, 0.14), 0 3px 14px rgba(0, 0, 0, 0.12), 0 5px 5px rgba(0, 0, 0, 0.2);
 
-.mat-optgroup .mat-option:not(.mat-option-multiple) {
+.mat-mdc-optgroup .mat-mdc-option:not(.mat-mdc-option-multiple) {
   // padding-left: 24px !important;
 }
 
@@ -213,17 +208,17 @@ noscript {
   }
 }
 
-.mat-menu-panel {
+.mat-mdc-menu-panel {
   border-radius: 8px !important;
 }
 
 // For Chrome, Safari.
-.mat-menu-panel::-webkit-scrollbar {
+.mat-mdc-menu-panel::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 16px;
 }
 
-.mat-menu-panel::-webkit-scrollbar-thumb {
+.mat-mdc-menu-panel::-webkit-scrollbar-thumb {
   border-radius: 16px;
   min-height: 56px;
   border: 4px solid transparent;
@@ -231,7 +226,7 @@ noscript {
   background-clip: content-box;
 }
 
-.mat-menu-panel:hover::-webkit-scrollbar-thumb {
+.mat-mdc-menu-panel:hover::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb-background);
 
   &:hover {
