--- a/src/app/components/home-question-list-item/home-question-list-item.component.html
+++ b/src/app/components/home-question-list-item/home-question-list-item.component.html
@@ -8,7 +8,7 @@
 -->
 
     <app-img-shadow [width]='40' [height]='40' src='{{question.user.picture}}' alt=''
-                     class='author-image-renderer'></app-img-shadow>
+                     class='author-image-renderer' />
 
   </a>
 
@@ -76,6 +76,6 @@
       <mat-chip *ngIf='!question.tags'>Test</mat-chip>
     </mat-chip-set>
 
-    <mat-divider></mat-divider>
+    <mat-divider />
   </div>
 </div>
