--- a/src/app/components/main/components/top-bar/components/search-form/search-form.component.html
+++ b/src/app/components/main/components/top-bar/components/search-form/search-form.component.html
@@ -1,7 +1,7 @@
 <form id='search-form' (submit)='formSubmit($event)'>
   <div class='search-form' matAutocompleteOrigin #origin='matAutocompleteOrigin'>
     <button mat-icon-button aria-label='Ara' matTooltip='Ara'>
-      <app-icon name='search'></app-icon>
+      <app-icon name='search' />
     </button>
     <input aria-label='Ara' autocomplete='off' spellcheck='false' placeholder='Ara'
            #autocompleteTrigger="matAutocompleteTrigger"
