--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -25,7 +25,7 @@
         </ng-container>
       </div>
 
-      <mat-divider></mat-divider>
+      <mat-divider />
     </div>
   </div>
 </ng-container>
