--- a/src/app/pages/create-question/create-question.component.html
+++ b/src/app/pages/create-question/create-question.component.html
@@ -52,11 +52,11 @@
 
       <div>
         <div class='overline-text'>Önizleme</div>
-        <mat-divider></mat-divider>
+        <mat-divider />
         <div [innerHTML]='questionForm.get("description")?.value' class='description-preview'></div>
       </div>
 
-      <app-chips-autocomplete></app-chips-autocomplete>
+      <app-chips-autocomplete />
 
       <div class='form-actions'>
         <button type='submit' mat-raised-button color='primary'>GÖNDER</button>
