--- a/src/app/pages/home/banner/banner.component.html
+++ b/src/app/pages/home/banner/banner.component.html
@@ -9,5 +9,5 @@
     </div>
     <button mat-button color="primary">TURN ON WIFI</button>
   </div>
-  <mat-divider></mat-divider>
+  <mat-divider />
 </div>
