--- a/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
+++ b/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
@@ -22,7 +22,7 @@
         <span>Oturumu kapat</span>
       </mat-list-item>
     </mat-nav-list>
-    <mat-divider></mat-divider>
+    <mat-divider />
     <mat-nav-list>
       <a mat-list-item routerLink='/settings'>
         <app-icon name='dark_mode' matListItemIcon></app-icon>
